// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YooDeviceComponent Re-rendering Should re-render when heading is updated 1`] = `
<yoo-device
  class="hydrated"
  data-yoo-device-host=""
  heading="Yoobic"
>
  
  <div
    class="device"
    data-yoo-device=""
  >
    <div
      class="content"
      data-yoo-device=""
    >
      <div
        attr-layout="column"
        class="column"
        data-yoo-device=""
      >
        <yoo-slim-scroll
          data-yoo-device=""
        >
          <div
            data-yoo-device=""
            data-yoo-device-slot=""
          >
            <div
              class="top-bar"
              data-yoo-device=""
            >
              <div
                attr-layout="row"
                data-yoo-device=""
              >
                <i
                  class="yo-menu"
                  data-yoo-device=""
                />
                <span
                  data-yoo-device=""
                />
                <span
                  class="heading"
                  data-yoo-device=""
                >
                  Operation
                </span>
                <span
                  data-yoo-device=""
                />
                <i
                  class="yo-settings"
                  data-yoo-device=""
                />
              </div>
            </div>
            
          </div>
        </yoo-slim-scroll>
      </div>
    </div>
  </div>
</yoo-device>
`;

exports[`YooDeviceComponent Re-rendering Should re-render when the heading is updated 1`] = `
<yoo-device
  class="hydrated"
  data-yoo-device-host=""
  heading="Yoobic"
>
  
  <div
    class="device"
    data-yoo-device=""
  >
    <div
      class="content"
      data-yoo-device=""
    >
      <div
        attr-layout="column"
        class="column"
        data-yoo-device=""
      >
        <yoo-slim-scroll
          data-yoo-device=""
        >
          <div
            data-yoo-device=""
            data-yoo-device-slot=""
          >
            
            
          </div>
        </yoo-slim-scroll>
      </div>
    </div>
  </div>
</yoo-device>
`;

exports[`YooDeviceComponent Rendering Should render with a heading 1`] = `
<yoo-device
  class="hydrated"
  data-yoo-device-host=""
  heading="Yoobic"
>
  
  <div
    class="device"
    data-yoo-device=""
  >
    <div
      class="content"
      data-yoo-device=""
    >
      <div
        attr-layout="column"
        class="column"
        data-yoo-device=""
      >
        <yoo-slim-scroll
          data-yoo-device=""
        >
          <div
            data-yoo-device=""
            data-yoo-device-slot=""
          >
            <div
              class="top-bar"
              data-yoo-device=""
            >
              <div
                attr-layout="row"
                data-yoo-device=""
              >
                <i
                  class="yo-menu"
                  data-yoo-device=""
                />
                <span
                  data-yoo-device=""
                />
                <span
                  class="heading"
                  data-yoo-device=""
                >
                  Yoobic
                </span>
                <span
                  data-yoo-device=""
                />
                <i
                  class="yo-settings"
                  data-yoo-device=""
                />
              </div>
            </div>
            
          </div>
        </yoo-slim-scroll>
      </div>
    </div>
  </div>
</yoo-device>
`;

exports[`YooDeviceComponent Rendering Should render without a top bar 1`] = `
<yoo-device
  class="hydrated"
  data-yoo-device-host=""
  hide-bar="true"
>
  
  <div
    class="device"
    data-yoo-device=""
  >
    <div
      class="content"
      data-yoo-device=""
    >
      <div
        attr-layout="column"
        class="column"
        data-yoo-device=""
      >
        <yoo-slim-scroll
          data-yoo-device=""
        >
          <div
            data-yoo-device=""
            data-yoo-device-slot=""
          >
            
            
          </div>
        </yoo-slim-scroll>
      </div>
    </div>
  </div>
</yoo-device>
`;

exports[`YooDeviceComponent Rendering should render 1`] = `
<yoo-device
  class="hydrated"
  data-yoo-device-host=""
>
  
  <div
    class="device"
    data-yoo-device=""
  >
    <div
      class="content"
      data-yoo-device=""
    >
      <div
        attr-layout="column"
        class="column"
        data-yoo-device=""
      >
        <yoo-slim-scroll
          data-yoo-device=""
        >
          <div
            data-yoo-device=""
            data-yoo-device-slot=""
          >
            <div
              class="top-bar"
              data-yoo-device=""
            >
              <div
                attr-layout="row"
                data-yoo-device=""
              >
                <i
                  class="yo-menu"
                  data-yoo-device=""
                />
                <span
                  data-yoo-device=""
                />
                <span
                  class="heading"
                  data-yoo-device=""
                >
                  
                </span>
                <span
                  data-yoo-device=""
                />
                <i
                  class="yo-settings"
                  data-yoo-device=""
                />
              </div>
            </div>
            
          </div>
        </yoo-slim-scroll>
      </div>
    </div>
  </div>
</yoo-device>
`;
